<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManageKeysActivity" >

    <Switch
        android:id="@+id/keyswitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/switchtext"
        android:textOff="@string/switchoff"
        android:textOn="@string/switchon" />
    
    <ListView
        android:id="@+id/keysview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createkey"
        android:layout_below="@+id/keyswitch"
        android:layout_centerHorizontal="true" >

    </ListView>

    <Button
        android:id="@+id/createkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/keyswitch"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/keyswitch"
        android:text="@string/createkeys" />

</RelativeLayout>
