<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComposeActivity" >

    <Spinner
        android:id="@+id/selectprivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:prompt="@string/from" />

    <Spinner
        android:id="@+id/selectpublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectprivate"
        android:layout_below="@+id/selectprivate"
        android:prompt="@string/to" />

    <TextView
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/selectpublic"
        android:layout_below="@+id/selectpublic"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/subjecttxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subject"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/subject"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subjecttxt"
        android:layout_below="@+id/subjecttxt"
        android:text="@string/compose" />

    <AutoCompleteTextView
        android:id="@+id/composebody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send"
        android:layout_alignLeft="@+id/compose"
        android:layout_alignRight="@+id/subjecttxt"
        android:layout_below="@+id/compose"
        android:ems="10" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/send" />

    <Button
        android:id="@+id/attachbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/send"
        android:layout_alignBottom="@+id/send"
        android:layout_alignLeft="@+id/composebody"
        android:text="@string/attachment" />
    
</RelativeLayout>