<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntroActivity" >

    <TextView
        android:id="@+id/welcometxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/introtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcometxt"
        android:layout_below="@+id/welcometxt"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="20dp"
        android:text="@string/intro" />

    <Button
        android:id="@+id/nextbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/nextbtn" />

    <TextView
        android:id="@+id/step1txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/introtxt"
        android:layout_centerVertical="true"
        android:text="@string/step1" />

</RelativeLayout>
