<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateKeyActivity" >

    <TextView
        android:id="@+id/passlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/passphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/passlabel"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passphrase"
        android:text="@string/confirm" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/passphrase"
        android:layout_below="@+id/confirmlabel"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/keysizelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirm"
        android:layout_below="@+id/confirm"
        android:text="@string/keylength" />

    <RadioGroup
        android:id="@+id/keysizegroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/confirm"
        android:layout_alignTop="@+id/keysizelabel"
        android:checkedButton="@+id/medium" >

        <RadioButton
            android:id="@+id/small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large" />
    </RadioGroup>

    <TextView
        android:id="@+id/expirationlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/keysizelabel"
        android:layout_below="@+id/keysizegroup"
        android:text="@string/expiration" />

    <EditText
        android:id="@+id/expiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/keysizegroup"
        android:layout_below="@+id/expirationlabel"
        android:ems="10"
        android:inputType="date" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/expiration"
        android:layout_below="@+id/expiration"
        android:text="@string/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/expiration"
        android:layout_below="@+id/namelabel"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/emaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emaillabel"
        android:layout_alignRight="@+id/name"
        android:layout_below="@+id/emaillabel"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/createbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="14dp"
        android:text="@string/create" />

</RelativeLayout>