<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DecodeVerify" >

    <TextView
        android:id="@+id/decintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/decodeintro" />

    <Button
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/decintro"
        android:layout_alignRight="@+id/decintro"
        android:layout_below="@+id/decintro"
        android:text="@string/choosebtn" />

    <TextView
        android:id="@+id/filepath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choose"
        android:layout_alignRight="@+id/choose"
        android:layout_below="@+id/choose"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:text="" />

    <Button
        android:id="@+id/actionbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/filepath"
        android:layout_alignRight="@+id/filepath"
        android:layout_below="@+id/filepath"
        android:text="@string/action" />

</RelativeLayout>
